Extract basic argument types and fix optional support.